<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="40dp">

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/currencyAutoCompleteView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:completionThreshold="1"
        android:layout_marginBottom="25dp"
        android:background="@drawable/edit_view_shape"
        android:textAllCaps="true"
        android:maxLength="3"
        android:inputType="textCapCharacters"
        android:hint="@string/change_currency_input"
        android:imeOptions="actionDone"
        android:padding="12dp"
        android:singleLine="true" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selectCurrencyOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currencyAutoCompleteView"
        app:layout_constraintStart_toStartOf="@id/currencyAutoCompleteView"
        android:text="@string/ok_label"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selectCurrencyCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currencyAutoCompleteView"
        app:layout_constraintEnd_toEndOf="@id/currencyAutoCompleteView"
        android:text="@string/cancel_label"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

