<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/settings_tabs_margin"
    android:background="@drawable/customization_section_background"
    app:layout_constraintStart_toStartOf="@id/margin_start_guide"
    app:layout_constraintTop_toBottomOf="@id/mobilepay_input_data_fields"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/swish_fields_tab_title"
        android:paddingTop="3dp"
        android:paddingBottom="2dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/form_text_black"
        android:text="@string/settings_swish_tab_tile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/swish_payment_provider_contract"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".96"
        android:layout_height="wrap_content"
        android:hint="@string/settings_swish_ppc"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/form_text_grey"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/form_text_black"
        android:theme="@style/EditTextThemeOverlay"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/swish_fields_tab_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/request_swish_payment_provider_contract_edit"
            android:textSize="16sp"
            android:inputType="text"
            android:textColor="@color/form_text_black"
            android:paddingStart="@dimen/text_input_padding"
            android:paddingEnd="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/swish_payment_entity_id"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".96"
        android:layout_height="wrap_content"
        android:hint="@string/settings_swish_api_entity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/form_text_grey"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/form_text_black"
        android:theme="@style/EditTextThemeOverlay"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/swish_payment_provider_contract"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/request_swish_payment_entity_id_edit"
            android:textSize="16sp"
            android:inputType="text"
            android:textColor="@color/form_text_black"
            android:paddingStart="@dimen/text_input_padding"
            android:paddingEnd="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>